err/django-couch-utils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/couchdb_python_curl-1.1.6.egg-info'...
Listing './lib/python3.5/site-packages/couchdbcurl'...
Compiling './lib/python3.5/site-packages/couchdbcurl/client.py'...
***   File "./lib/python3.5/site-packages/couchdbcurl/client.py", line 1244
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/couchdbcurl/dbcompact.py'...
***   File "./lib/python3.5/site-packages/couchdbcurl/dbcompact.py", line 26
    print 'Parsing entry', entry
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/couchdbcurl/pinger.py'...
***   File "./lib/python3.5/site-packages/couchdbcurl/pinger.py", line 32
    print "Some errors occured:", sys.exc_info()[1]
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/couchdbcurl/schema.py'...
***   File "./lib/python3.5/site-packages/couchdbcurl/schema.py", line 467
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/couchdbcurl/tests'...
Compiling './lib/python3.5/site-packages/couchdbcurl/tests/client.py'...
***   File "./lib/python3.5/site-packages/couchdbcurl/tests/client.py", line 89
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/couchdbcurl/tests/schema.py'...
***   File "./lib/python3.5/site-packages/couchdbcurl/tests/schema.py", line 69
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/couchdbcurl/tools'...
Compiling './lib/python3.5/site-packages/couchdbcurl/tools/load.py'...
***   File "./lib/python3.5/site-packages/couchdbcurl/tools/load.py", line 52
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/couchdbcurl/tools/replication_helper.py'...
***   File "./lib/python3.5/site-packages/couchdbcurl/tools/replication_helper.py", line 144
    except httplib.HTTPException, e:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/couchdbcurl/tools/replication_helper_test.py'...
***   File "./lib/python3.5/site-packages/couchdbcurl/tools/replication_helper_test.py", line 44
    print 'Inserting document in to database "a"'
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/couchdbcurl/view.py'...
***   File "./lib/python3.5/site-packages/couchdbcurl/view.py", line 50
    exec string in {'log': _log}, globals_
              ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/django_couch'...
Listing './lib/python3.5/site-packages/django_couch/admin'...
Compiling './lib/python3.5/site-packages/django_couch/admin/deprecated.py'...
***   File "./lib/python3.5/site-packages/django_couch/admin/deprecated.py", line 23
    print 'register:', app, doc, admin_object
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_couch/auth'...
Listing './lib/python3.5/site-packages/django_couch/auth/management'...
Listing './lib/python3.5/site-packages/django_couch/auth/management/commands'...
Listing './lib/python3.5/site-packages/django_couch/cluster'...
Listing './lib/python3.5/site-packages/django_couch/cluster/templatetags'...
Listing './lib/python3.5/site-packages/django_couch/flatpages'...
Listing './lib/python3.5/site-packages/django_couch/management'...
Listing './lib/python3.5/site-packages/django_couch/management/commands'...
Compiling './lib/python3.5/site-packages/django_couch/management/commands/couch.py'...
***   File "./lib/python3.5/site-packages/django_couch/management/commands/couch.py", line 49
    print "No action specified"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django_couch/management/commands/couch_create_admin.py'...
***   File "./lib/python3.5/site-packages/django_couch/management/commands/couch_create_admin.py", line 39
    print 'User %s created. Document id: %s, password: %s' % (username, u.id, password)
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_couch/management/commands/couch_init.py'...
***   File "./lib/python3.5/site-packages/django_couch/management/commands/couch_init.py", line 19
    print "Creating types/list view"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/django_couch/management/commands/couch_munin.py'...
***   File "./lib/python3.5/site-packages/django_couch/management/commands/couch_munin.py", line 38
    print "%s.value %s" % (row.key, row.value)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_couch/management/commands/couch_ping.py'...
***   File "./lib/python3.5/site-packages/django_couch/management/commands/couch_ping.py", line 25
    print 'quering view %s/%s' % (self.view_name, self.func_name)
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_couch/sitemaps'...
Listing './lib/python3.5/site-packages/django_couch/sitemaps/templates'...
Listing './lib/python3.5/site-packages/django_couch/templates'...
Listing './lib/python3.5/site-packages/django_couch/templates/cluster'...
Listing './lib/python3.5/site-packages/django_couch_utils-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
